 * apport: Also treat a binary as modified if the /proc/pid/exe symlink does
   not point to an existing file any more. (LP: #984944)
 * Fix PEP-8 violations picked up by latest pep8 checker.
 * ui.py: Do not ignore certain exceptions during upload which are not likely
   to be a network error.
 * launchpad.py: Recongize Launchpad projects for bug query and marking
   operations. (LP: #1003506)

2.2.5 (2012-06-21):
-------------------
 * launchpad.py: Fix str vs. bytes crash for already known bugs, take 2. (LP: #1015788)
 * apport/ui.py, get_desktop_entry(): Disable interpolation, to correctly read
   desktop files with % signs. (LP: #1014341)
 * apport/ui.py: Fix rare crash if a report is already being updated in the
   background when the UI tries to update a previous version. (LP: #949196)
 * GTK and KDE UI tests: Avoid eternal hangs due to "this is not a distro
   package" error messages.

2.2.4 (2012-06-21):
--------------------
Bug fixes:
 * test_apport_unpack.py: Fix test_unpack_python() test when running the
   system-installed tests.
 * data/java_uncaught_exception: Fix for Python 3.
 * test_signal_crashes.py: Show crash reports in /var/crash/.
 * test_crash_digger.py: Do not write crash reports of crash-digger into system
   /var/crash, use a temporary directory.
 * test/run: Wait for a previous xvfb server to finish before trying to start
   one. This fixes a race condition in the KDE UI tests which often failed to
   start up xvfb.
 * apport-cli: Unbreak "keep" option. (LP: #1007826)
 * launchpad.py: Fix str vs. bytes crash for already known bugs. (LP: #1015788)

2.2.3 (2012-06-15):
-------------------
Bug fixes:
 * test/run: Do not run pep8 and pyflakes when running against the sytem
   installed Apport.
 * test_backend_apt_dpkg.py: For the "are we online" check, verify that we can
   download from http://ddebs.ubuntu.com/, not just whether we have a default
   route. The latter is not sufficient for e. g. buildd environments which are